# ChessBot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
engine/: Makefile  board.cpp  board.h  chess_bot.cpp  chess_bot.h  chess_game.cpp  chess_game.h  main.cpp
engine/exceptions/: board_exception.h  fen_exception.h
engine/misc/: board_settings.h  move.h  piece.cpp  piece.h  player.h  square.h  zobrist.h
engine/movement/: move_gen.cpp  move_gen.h  piece_movements.cpp  piece_movements.h
manager/: board.h  board_manager.cpp  board_manager.h  move_gen.cpp  move_gen.h  piece.cpp  piece.h  piece_movements.cpp  piece_movements.h
manager/misc/: PieceType.cpp  PieceType.h  move.h  piece.cpp  piece.h
manager/pieces/: bishop.cpp  bishop.h  immortal.cpp  immortal.h  king.cpp  king.h  knight.cpp  knight.h  mimic.cpp  mimic.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
tests/: Makefile  perft.cpp  tests.cpp
tests/data/: input-test.epd  perft-positions.epd
